# CosmosEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  azure-pipelines.yml  main.cpp
CosmosEngine/: CMakeLists.txt  Export.h
CosmosEngine/App/: App.cpp  App.h
CosmosEngine/Audio/: AudioBackend.cpp  AudioBackend.h  AudioPlayer.cpp  AudioPlayer.h  Decoder.cpp  Decoder.h  DefaultAudioBackend.h
CosmosEngine/Audio/CoreAudio/: CoreAudioBackend.cpp  CoreAudioBackend.h  CoreAudioBackendBridge.h  CoreAudioBackendBridge.m  CoreAudioPlayer.cpp  CoreAudioPlayer.h
CosmosEngine/Audio/Decoder/: Decoder.cpp  Decoder.h
CosmosEngine/Audio/OpenAL/: OpenALBackend.cpp  OpenALBackend.h  OpenALPlayer.cpp  OpenALPlayer.h
CosmosEngine/Audio/XAudio2/: XAudio2Backend.cpp  XAudio2Backend.h  XAudio2Callback.cpp  XAudio2Callback.h  XAudio2Player.cpp  XAudio2Player.h
CosmosEngine/Compiler/: Compiler.h
CosmosEngine/Core/: AudioSource.cpp  AudioSource.h  BoxCollider.cpp  BoxCollider.h  Camera.cpp  Camera.h  Collider.cpp  Collider.h  Component.cpp  Component.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshRenderer.cpp  MeshRenderer.h  Object.cpp  Object.h  Rigidbody.cpp  Rigidbody.h  Scene.cpp  Scene.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h
CosmosEngine/Input/: InputBackend.cpp  InputBackend.h
CosmosEngine/Input/GLFW/: GLFWInputBackend.cpp  GLFWInputBackend.h
CosmosEngine/Logging/: Logging.cpp  Logging.h  LoggingObjC.cpp  LoggingObjC.h
CosmosEngine/OS/: MacOSXBundleInfo.plist.in
CosmosEngine/Physics/: PhysicsSystem.cpp  PhysicsSystem.h  SphereCollider.cpp  SphereCollider.h
CosmosEngine/Rendering/: CommandBuffer.cpp  CommandBuffer.h  ReflectionalShader.cpp  ReflectionalShader.h  RenderingBackend.cpp  RenderingBackend.h  RenderingPipeline.cpp  RenderingPipeline.h
CosmosEngine/Rendering/Shaders/: PixelShader.hlsl  VertexShader.hlsl  shader.frag  shader.vert
CosmosEngine/Rendering/Vulkan/: ReflectionalSpirV.cpp  ReflectionalSpirV.h  VulkanBackend.cpp  VulkanBackend.h  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanPipeline.cpp  VulkanPipeline.h
CosmosEngine/Rendering/Vulkan/SPIRV_Reflect/: spirv_reflect.h
CosmosEngine/Rendering/Vulkan/SPRIV_Reflect/: spirv_reflect.c
CosmosEngine/Serialization/: Serialization.cpp  Serialization.h
CosmosEngine/Threading/: JobQueue.cpp  JobQueue.h  JobSystem.cpp  JobSystem.h
Scripts/: download_dependencies.py
TestGame/: CMakeLists.txt  main.cpp
TestGame/Scripts/: CameraMovement.cpp  CameraMovement.h  ObjectMovement.cpp  ObjectMovement.h  TestForce.cpp  TestForce.h
TestGame/TestGameApp/: TestGameApp.cpp  TestGameApp.h
